--- a/startit_app/templates/profile.html
+++ b/startit_app/templates/profile.html
@@ -25,7 +25,7 @@
         <a href="#" class="active">Я посещал</a>
         <a href="{% url 'profile_liked_page' %}" class="pot">Мои Брони</a>
     </div>
-    {% for quest in quests %}
+    {% for quest in qprofile %}
     <div class="quest-card">
         <div class="quest-container1">
             <div>
